--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,4 @@ RewriteEngine on
 
 RewriteCond %{REQUEST_FILENAME} !(.*)\$
 RewriteRule ^([^/]+)\.html$ index.php?page=$1
+RewriteRule ^([^/]+)/([^/]+)\.html$ index.php?page=$1&slug=$2
