Design aide projet + modification paramètres + design divers

--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,5 @@ RewriteRule ^recherche/$ index.php?page=recherche&search=%1
 RewriteCond %{REQUEST_FILENAME} !(.*)\$
 RewriteRule ^([^/]+)\.html$ index.php?page=$1
 RewriteRule ^([^/]+)/([^/]+)\.html$ index.php?page=$1&slug=$2
+
+ErrorDocument 404 /polyphonia_new/index.php?page=404
