MDP oublié + pagination sujets ouverts

--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,9 @@ RewriteEngine on
 RewriteCond %{QUERY_STRING} (?:^|&)search=(.*)
 RewriteRule ^recherche/$ index.php?page=recherche&search=%1
 
+RewriteCond %{QUERY_STRING} (?:^|&)pagination=(.*)
+RewriteRule ^([^/]+)/([^/]+)\.html/$ index.php?page=$1&slug=$2&pagination=%1
+
 RewriteCond %{REQUEST_FILENAME} !(.*)\$
 RewriteRule ^([^/]+)\.html$ index.php?page=$1
 RewriteRule ^([^/]+)/([^/]+)\.html$ index.php?page=$1&slug=$2
