--- a/.htaccess
+++ b/.htaccess
@@ -7,6 +7,9 @@ RewriteRule ^recherche/$ index.php?page=recherche&search=%1
 RewriteCond %{QUERY_STRING} (?:^|&)pagination=(.*)
 RewriteRule ^([^/]+)/([^/]+)\.html/$ index.php?page=$1&slug=$2&pagination=%1
 
+RewriteCond %{QUERY_STRING} (?:^|&)p=(.*)
+RewriteRule ^([^/]+)\.html$ index.php?page=$1&p=%1
+
 RewriteCond %{REQUEST_FILENAME} !(.*)\$
 RewriteRule ^([^/]+)\.html$ index.php?page=$1
 RewriteRule ^([^/]+)/([^/]+)\.html$ index.php?page=$1&slug=$2
